feat: diagnostic logs observability
